# siriders1_NPU_yolov4_tiny_demo

./: README.md
compile/: CMakeLists.txt
compile/aiputest/: CMakeLists.txt  main.cpp
compile/umd/: CMakeLists.txt
compile/umd/r1p3/: CMakeLists.txt
convert/: preprocess.py  tflite_yolo_v4_tinybuild.cfg
demo/: yolov4_aipu.py
demo/linux/: aipu_test
demo/linux/libs/: libaipudrv.so.1.3.0
